--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
@@ -28,6 +30,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.4'
+    include group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.4'
 }
 
 processResources {
